[BUGFIX] Fix design for collapsing columns (#1297)
Displaying the toggler in the header of the element.
Right next to the edit / hide / delete / buttons.

Bugfix in fluxCollapse.js
Array.isArray() is used to check whether the cookie variable is of type "array" and to avoid javascript errors.
Optimizing Cookie handling; remove "null" items from cookie array.

Tested in TYPO3 7.6.15, 8.6.0-dev

--- a/Resources/Public/css/grid.css
+++ b/Resources/Public/css/grid.css
@@ -1,9 +1,6 @@
-.toggle-content { cursor: pointer; float: right; margin-top: -15px; }
 .flux-grid { width: 100%; }
 .flux-grid td { vertical-align: top; }
 .flux-grid-hidden { display: none; }
-.t3-page-ce .toggle-content { visibility: hidden; }
-.t3-page-ce:hover .toggle-content { visibility: visible; }
 .t3-page-ce-dragitem:hover .t3-page-ce-wrapper-new-ce { cursor: move; }
 
 .flux-grid tr:first-child:last-child td:first-child:last-child {
